ubnt-clash (0.3.4) sid; urgency=medium

  * Reload config using REST API
  * Auto change server if testing failed
  * Rename update-time to update-interval

 -- sskaje <sskaje@gmail.com>  Tue, 30 May 2022 11:52:00 +0000

ubnt-clash (0.3.3) sid; urgency=medium

  * Monitor to cron
  * Move update time to configure mode
  * 上海真的要解封了？

 -- sskaje <sskaje@gmail.com>  Tue, 30 May 2022 11:52:00 +0000

ubnt-clash (0.3.2) sid; urgency=medium

  * More rules
  * Monitor
  * Geosite rules for Meta

 -- sskaje <sskaje@gmail.com>  Tue, 18 May 2022 15:45:00 +0000

ubnt-clash (0.3.1) sid; urgency=medium

  * Up/Down scripts

 -- sskaje <sskaje@gmail.com>  Tue, 03 May 2022 02:00:00 +0000

ubnt-clash (0.3.0) sid; urgency=medium

  * Change config loading order, extra config files supported.

 -- sskaje <sskaje@gmail.com>  Wed, 23 Apr 2022 10:00:00 +0000

ubnt-clash (0.2.3) sid; urgency=medium

  * Support Clash.Meta

 -- sskaje <sskaje@gmail.com>  Wed, 13 Apr 2022 07:51:00 +0000

ubnt-clash (0.2.2) sid; urgency=medium

  * Add Clash Dashboard

 -- sskaje <sskaje@gmail.com>  Wed, 09 Apr 2022 12:31:00 +0000

ubnt-clash (0.2.1) sid; urgency=medium

  * Fix auto-start. 

 -- sskaje <sskaje@gmail.com>  Wed, 09 Apr 2022 09:57:00 +0000

ubnt-clash (0.2.0) sid; urgency=medium

  * Add config files for DNS settings. 

 -- sskaje <sskaje@gmail.com>  Wed, 09 Apr 2022 09:00:00 +0000

ubnt-clash (0.1.1) sid; urgency=medium

  * Fix p.rst.im proxy error.

 -- sskaje <sskaje@gmail.com>  Wed, 08 Apr 2022 10:00:00 +0000

ubnt-clash (0.1.0) sid; urgency=medium

  * First release.

 -- sskaje <sskaje@gmail.com>  Wed, 07 Apr 2022 08:00:00 +0000